tests/calico_testcases/example_policies/testcase17-sanity/testcase17-empty-globalNetworkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: testcase17-empty-globalNetworkpolicy
spec:
  types:
  - Ingress
  - Egress
