tests/calico_testcases/example_policies/testcase17-sanity/testcase17-equiv-global-networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: testcase17-equiv-global-networkpolicy
spec:
  order: 1
  selector: tier == 'frontend'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      namespaceSelector: unique-label == 'defaultNameSpace'
  - action: Allow
    source:
      selector: app  == 'keepalived-watcher'
  egress:
  - action: Allow
    destination:
      selector: app  == 'keepalived-watcher'
