tests/calico_testcases/example_policies/testcase17-sanity/testcase17-open-default.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase17-open-default-namespace
  namespace: default
spec:
  order: 10
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
  egress:
  - action: Allow
